fixes rental pg mobile spacing

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,42 @@ CSS LEGEND NEED TO EDIT
 7) #MediaQuery 1024px
 */
 
+
+/* #TODO
+
+don't repeat your code!
+
+attribute selectors for form? do I need form name?
+	input[type="text"] {
+	    width: 150px;
+	    display: block;
+	    margin-bottom: 10px;
+	    background-color: yellow;
+	}
+	input[type="button"] {
+	    width: 120px;
+	    margin-left: 35px;
+	    display: block;
+	}
+
+slider images could be further optimized
+don't need to include a form content inside a ul
+browser prefix for transition
+Add legend in JS
+Fix legend in CSS
+clean up CSS & JS (cache dom)
+
+HTML5 IF STATEMENT
+<head>
+    <title>My Awesome Website</title>
+    <!--[if lt IE 9]>
+        <script src="js/selectivizr-min.js"></script>
+        <script src="js/html5shiv.min.js"></script>
+    <![endif]-->
+</head>
+
+*/
+
 /* #OOCSS Classes */
 .currency {	
 	text-align: right;
@@ -20,7 +56,7 @@ CSS LEGEND NEED TO EDIT
 	text-indent: 0.5rem;
 }
 .small-indent {
-	min-width: 20px;
+	min-width: 1.25rem;
     display: inline-block;
 }
 .med-indent {
@@ -65,26 +101,27 @@ body {
 
 header {
 	max-width: 1200px;
+	margin: 0 auto; /*#USE THIS A LOT*/
 }
 h1 {
 	font-size: 1.75rem;
 }
 .willoe-header-container {
-	width: 240px;
-	margin: 0 auto;
+	width: 15rem;
+	margin: 0 auto; /*#USE THIS A LOT*/
 	padding: 1rem;
 }
 .cra-header-container {
 	display: none;
 }
 header img {
-	max-width: 100%;
+	max-width: 100%; /*#USE THIS A LOT*/
 }
 
 /* #NAV */
 
 .main-nav  {
-	width: 100%;
+	width: 100%; /*#USE THIS A LOT*/
 }
 .main-nav ul {
     margin: 0;
@@ -98,8 +135,8 @@ header img {
     width: 8rem;
     display: inline-block;
 	padding: 1rem 0;
-    color: #fff;
-    text-decoration: none;
+    color: #fff; /*#USE THIS A LOT*/
+    text-decoration: none; /*USE THIS A LOT, GLOBAL STYLE?*/
     font-size: 1rem;
 }
 
@@ -118,49 +155,48 @@ header img {
 /*#INDEX CONTENT*/
 
 .content-stihl-logo {
-	height: 60px;
+	height: 3.75rem;
 	padding: 1rem;
 }
 .content-toro-logo {
-	height: 62px;
+	height: 3.875rem;
 	padding: 1rem;
 }
 .slider-container {
-	visibility: visible;
 	display: inline;
 	position: relative;
-	width: 100%;
-	margin: 0 auto;
-	height: 320px;
+	width: 100%; /*USE THIS A LOT*/
+	margin: 0 auto; /*USE THIS A LOT*/
+	height: 20rem;
 	overflow: hidden;
 }
 #slider {
-	width: 100%;
-	height: 320px;
+	width: 100%; /*USE THIS A LOT*/
+	height: 20rem;
 	overflow: hidden;
-	margin: 0 auto;
+	margin: 0 auto; /*USE THIS A LOT*/
 }
 .slides {
 	display: block;
-	width: 5184px;
-	height: 320px;
-	margin: 0 0 0 -680px;
+	width: 324rem;
+	height: 20rem;
+	margin: 0 0 0 -42.5rem;
 	padding: 0;
 }
 .slide {
 	float: left;
 	list-style: none;
-	width: 576px;
-	height: 320px;
+	width: 36rem;
+	height: 20rem;
 }
 .index-stihl-product-image {
-	width: 400px;
+	width: 25rem;
   	position: relative;
   	top: 50%;
   	transform: translateY(-50%);
 }
 .index-toro-product-image {
-	width: 320px;
+	width: 20rem;
   	position: relative;
   	top: 50%;
   	transform: translateY(-50%);
@@ -168,33 +204,30 @@ header img {
 
 /*#STIHL CONTENT*/
 
-.stihl-products-container {
-	width: 100%;
-	margin: 0 auto;
-}
+.stihl-products-container,
 .stihl-product-categories-container {
-	width: 100%;
-	margin: 0 auto;
+	width: 100%; /*USE THIS A LOT*/
+	margin: 0 auto; /*USE THIS A LOT*/
 }
 .product-categories {
 	width: 50%;
-	margin: 0 auto;
+	margin: 0 auto; /*USE THIS A LOT*/
 }
 .product-categories a {
-	width: 100%;
-	text-decoration: none;
+	width: 100%; /*USE THIS A LOT*/
+	text-decoration: none; /*USE THIS A LOT, GLOBAL STYLE?*/
 	color: rgb(243,122,31);
 }
 .product-info-container {
-	width: 100%;
+	width: 100%; /*USE THIS A LOT*/
 	margin: 0 auto 0.75rem;
-	border: 0.1rem solid rgb(243,122,31);
+	border: 0.125rem solid rgb(243,122,31);
 }
 .product-info-container img {
 	max-width: 100%;
 }
 .stihl-h1-logo {
-	width: 75px;
+	width: 4.6875rem;
 	vertical-align: bottom;
 }
 .fall-flyer-banner-left, 
@@ -205,7 +238,7 @@ header img {
 /* #TORO CONTENT */
 
 .toro-product-container {
-	margin: 0 auto;
+	margin: 0 auto; /*use this a lot*/
 	width: 20rem;
 }
 .toro-product-info-one,
@@ -213,9 +246,9 @@ header img {
 	margin-top: 3rem;
 	max-width: 100%;
 }
-.toro-h1-logo {
-	width: 60px;
-	vertical-align: bottom;
+.toro-h1-logo { /*same size as other TORO image?*/
+	width: 3.75rem;
+	vertical-align: bottom; /*use this a lot*/
 }
 .toro-product-container ul {
 	text-align: left;
@@ -225,7 +258,7 @@ header img {
 	font-size: .75rem;
 }
 .toro-product-container img {
-	width: 240px;
+	width: 15rem;
 }
 
 /* #RENTAL CONTENT */
@@ -248,7 +281,7 @@ header img {
 }
 .rental-side-nav li {
 	padding: 0.2rem 0;
-	border-bottom: 1px solid #204288;
+	border-bottom: 0.1rem solid #204288;
 }
 .rental-side-nav a {
 	display: block;
@@ -267,8 +300,8 @@ header img {
 }
 .rental-rates-table th,
 .rental-rates-table td {
-	padding: .15rem .25rem;
-	border: 1px solid;
+	padding: .15rem .2rem;
+	border: 0.1rem solid;
 }
 .back-to-rentals-menu {
 	display: none;
@@ -301,14 +334,14 @@ iframe {
 	margin-top: 1rem;
 	border: none;
 	width: 100%;
-	height: 180px;
+	height: 11.25rem;
 }
 .fb-img-container {
-	width: 120px;
+	width: 7.5rem;
 	margin: 2rem 0;
 }
 .cra-secondary-container {
-	width: 140px;
+	width: 8.75rem;
 	margin: 0 auto;
 }
 .cra-secondary-container img,
@@ -341,7 +374,7 @@ form li {
     margin-bottom: 0.75rem;
 }
 form label {
-    margin: 0 0 3px 0;
+    margin: 0 0 .1875rem 0;
     padding: 0;
     font-weight: bold;
 }
@@ -354,7 +387,7 @@ textarea {
 }
 form input:hover,
 textarea:hover {
-    border: 1px solid #009900;
+    border: .1rem solid #009900;
 }
 form button {
 	font-size: 1rem;
@@ -379,14 +412,12 @@ form .missing-fields-message {
 
 /* #MediaQuery 480px */
 
-@media all and (min-width: 480px) {
+@media (min-width: 480px) {
 	
 	/* #HEADER */
 
 	header {
 		width: 95%;
-		margin: 0 auto;
-/*		border: 1px solid black;*/
 	}
 	.willoe-header-container {
 		float: left;
@@ -394,7 +425,7 @@ form .missing-fields-message {
 		padding: 1rem;
 	}
 	.cra-header-container {
-		width: 120px;
+		width: 7.5rem;
 		float: right;
 		visibility: visible;
 		display: inline;
@@ -417,10 +448,10 @@ form .missing-fields-message {
 	/* #INDEX CONTENT */	
 
 	.slider-container {
-		width: 360px;
+		width: 22.5rem;
 	}
 	#slider {
-		width: 360px;
+		width: 22.5rem;
 	}
 
 	/* #STIHL CONTENT */
@@ -457,14 +488,8 @@ form .missing-fields-message {
 
 /* #MediaQuery 768px */
 
-@media all and (min-width: 768px) {
+@media (min-width: 768px) {
 	
-	/* #HEADER */
-
-/*	header {
-		border: 1px solid green;
-	}*/
-
 	/* #NAV */
 
 	.main-nav a {
@@ -497,19 +522,18 @@ form .missing-fields-message {
 		padding-right: 2.5%
 	}
 	.product-categories {
-		width: 45%;
 		margin: 0 0 0 5%;
 	}
 	.product-info-container:hover {
-		border: 0.1rem solid gray;
+		border: 0.125rem solid gray;
 	}
 	.fall-flyer-banner-left {
-		width: 100px;
+		width: 6.25rem;
 		float: left;
 		display: block;
 	}
 	.fall-flyer-banner-right {
-		width: 100px;
+		width: 6.25rem;
 		float: left;
 		display: block;
 	}
@@ -551,7 +575,6 @@ form .missing-fields-message {
 	.rental-side-nav h1 {
 		font-size: 1.25rem;
 	}
-
 	#content-air-compressors {
 		display: block;
 	}
@@ -581,13 +604,7 @@ form .missing-fields-message {
 
 /* #MediaQuery 1024px */
 
-@media all and (min-width: 1024px) {
-
-	/* #HEADER */
-
-/*	header {
-		border: 1px solid blue;
-	}*/
+@media (min-width: 1024px) {
 
 	/* #CONTENT CONTAINERS */
 
